--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Git</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Git</h1>
+        <p>Git is a version control system</p>
+        <p>Git is free software</p>
+        <p>Git is a distributed version control system</p>
+    </div>
     
 </body>
 </html>
