--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <p>Git is free software</p>
         <p>Git is a distributed version control system</p>
     </div>
-    
+    <head>
+        <script src="index.js"></script>
+    </head>
 </body>
 </html>
