--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <p>Git is free software</p>
         <p>Git is a distributed version control system</p>
     </div>
+    <div class="container" >
+        <h1>Git</h1>
+    </div>
     <head>
     </head>
 </body>
