--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Git is a distributed version control system</p>
     </div>
     <div class="container" >
-        <h1>Git</h1>
+        <h1>Cambio</h1>
     </div>
     <head>
     </head>
